# review-tools

./: AGENTS.md  README.md  layout.md  pyproject.toml  review_payload.json
docs/: agent-guide.md  analyze-patterns.md  posting-github-reviews.md  pr-review-checklist-generation-guide.md  respond-to-reviews.md  review-a-pr.md  review-checklist.md
scripts/: get_comment.py  get_diff.py  get_pr_files.py  parse_pr.py  parse_threads.py  pr_threads.py
skills/parallel-claude-sessions/: SKILL.md
skills/review-tools/: SKILL.md  layout.md
skills/review-tools/references/: analyze-patterns.md  parallel-pr-review.md  python-313-checklist.md  respond-to-reviews.md  review-a-pr.md  review-checklist.md
skills/review-tools/scripts/: README.md
skills/review-tools/scripts/src/review_tools/: build_review.py  common.py  get_positions.py  post_review.py  pr_threads.py  reply_review.py  scan_violations.py  suggest_checklist.py
src/review_tools/: build_review.py  common.py  get_positions.py  post_review.py  pr_threads.py  reply_review.py  scan_violations.py  suggest_checklist.py
